--- a/src/App.css
+++ b/src/App.css
@@ -1,88 +1,1 @@
-@import url("https://fonts.googleapis.com/css?family=Montserrat");
-
-.App {
-  text-align: center;
-}
-
-body {
-  background-image: url("./random_grey_variations_@2X.png");
-}
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
-}
-
-.App-link {
-  color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
-}
-
-h1 {
-  color: white;
-  font-size: 7vw;
-  font-family: "Montserrat";
-}
-
-p {
-  color: white;
-  font-size: 2vw;
-  font-weight: lighter;
-  font-family: "Montserrat";
-}
-
-dl,
-dt,
-dd {
-  color: white;
-  font-size: 2vw;
-  font-weight: normal;
-  float: right;
-}
-
-/* html {
-  font-size: 1rem;
-}
-
-@include media-breakpoint-up(sm) {
-  html {
-    font-size: 1.2rem;
-  }
-}
-
-@include media-breakpoint-up(md) {
-  html {
-    font-size: 1.4rem;
-  }
-}
-
-@include media-breakpoint-up(lg) {
-  html {
-    font-size: 1.6rem;
-  }
-} */
+@import url("https://fonts.googleapis.com/css?family=Montserrat|Roboto");
